--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
 <h1>KO Tree Demonstration</h1>
+<h4>Try and drag the items on top of each other!</h4>
 
 <div data-bind-element='projects'>
   <%= form_for(:project, html: { id: 'projects-form', 'data-bind' => 'submit: submitProject' }) do |f| %>
