--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,14 +38,14 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="offset3 span6">
+        <div>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div><!--/row-->
 
       <footer>
-        <p>&copy; KO Tree 2013</p>
+        <p>&copy; KO & Angular Tree 2013</p>
       </footer>
 
     </div> <!-- /container -->
