--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -38,16 +38,7 @@
         </div>
         <% end %>
 
-        <script type='text/ng-template' id='/treeItems.html'>
-          <span>{{project.name}}</span><span class='pull-right project-delete' ng-click='deleteProject($index)'><i class='icon-trash'></i></span>
-          <ul class="nav nav-list">
-            <li ng-repeat='project in project.projects' ng-include src="'/treeItems.html'"></li>
-          </ul>
-        </script>
-
-        <ul class="nav nav-list">
-          <li ng-repeat='project in projects' ng-include src="'/treeItems.html'"></li>
-        </ul>
+        <ngtree val="projects"></ngtree>
       </div>
     </div>
   </div>
